--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.15.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
