--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.9.0</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
