--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ build/
 .vscode/
 /src/main/resources/application.properties
 /src/main/resources/application-dev.properties
+/src/main/resources/credentials.json
+/src/main/resources/credentials.json
