Add telegram bot integration

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,16 @@
 			<artifactId>google-api-services-sheets</artifactId>
 			<version>v4-rev493-1.23.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambotsextensions</artifactId>
+			<version>6.1.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
